Fixed edit/delete issue with buttons not showing

--- a/src/css/scss/main.scss
+++ b/src/css/scss/main.scss
@@ -197,7 +197,7 @@ img {
   padding: 10px;
 
   position: absolute;
-  left: calc(50% - 250px);
+  left: calc(50% - 155px);
   top: calc(50% - 200px);
   z-index: 11;
 
